--- a/packages/edge-cms/package.json
+++ b/packages/edge-cms/package.json
@@ -1,11 +1,14 @@
 {
   "name": "edge-cms",
   "version": "0.0.1",
+  "type": "module",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "/dist"
+    "/dist",
+    "../../README.md",
+    "package.json"
   ],
   "repository": {
     "type": "git",
@@ -33,9 +36,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230518.0",
     "esbuild": "^0.17.19",
-    "np": "^8.0.2",
     "npm-run-all": "^4.1.5",
-    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
 }
