--- a/packages/edge-cms/package.json
+++ b/packages/edge-cms/package.json
@@ -2,14 +2,39 @@
   "name": "edge-cms",
   "version": "0.0.1",
   "type": "module",
-  "main": "./dist/index.cjs.js",
-  "module": "./dist/index.esm.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "/dist",
+    "dist",
     "../../README.md",
     "package.json"
   ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./cms": {
+      "types": "./dist/cms.d.ts",
+      "import": "./dist/cms.js"
+    },
+    "./entry": {
+      "types": "./dist/entry/index.d.ts",
+      "import": "./dist/entry/index.js"
+    },
+    "./element": {
+      "types": "./dist/element/index.d.ts",
+      "import": "./dist/element/index.js"
+    },
+    "./database": {
+      "types": "./dist/database/index.d.ts",
+      "import": "./dist/database/index.js"
+    },
+    "./cdn": {
+      "types": "./dist/cdn/index.d.ts",
+      "import": "./dist/cdn/index.js"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yieldspace/EdgeCMS"
@@ -25,7 +50,7 @@
   "author": "sizumita <contact@yieldspace.app>",
   "license": "MIT",
   "scripts": {
-    "build": "run-p build:esbuild build:types",
+    "build": "rimraf dist && run-p build:esbuild build:types",
     "build:types": "tsc --declaration --emitDeclarationOnly --declarationDir './dist'",
     "build:esbuild": "node build.js",
     "release": "np"
@@ -36,7 +61,9 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230518.0",
     "esbuild": "^0.17.19",
+    "glob": "^10.2.7",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.1",
     "typescript": "^5.1.3"
   }
 }
