--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "turbo": "^1.10.2",
     "wrangler": "^3.1.0"
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.26.1"
   }
 }
