--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,6 @@ next-env.d.ts
 # Edge?
 /static
 
-# Cloudflare
-.dev.vars
-
 # yarn (not using Zero-Installs)
 .yarn/*
 !.yarn/patches
@@ -49,3 +46,6 @@ next-env.d.ts
 !.yarn/sdks
 !.yarn/versions
 .pnp.*
+
+.turbo/
+dist/
