--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "edge-cms",
-  "version": "0.0.3",
+  "name": "@edge-cms/ui",
+  "version": "0.0.1",
   "type": "module",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/",
     "../../README.md",
@@ -24,21 +24,22 @@
   },
   "author": "sizumita <contact@yieldspace.app>",
   "license": "MIT",
-  "scripts": {
-    "build": "rimraf dist && run-p build:esbuild build:types",
-    "build:types": "tsc --declaration --emitDeclarationOnly --declarationDir './dist'",
-    "build:esbuild": "node build.js"
-  },
   "dependencies": {
-    "hono": "^3.2.5"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230518.0",
+    "@types/react": "^18.2.9",
     "esbuild": "^0.17.19",
     "glob": "^10.2.7",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.1",
     "tsc": "^2.0.4",
     "typescript": "^5.1.3"
+  },
+  "scripts": {
+    "build": "rimraf dist && run-p build:esbuild build:types",
+    "build:types": "tsc --declaration --emitDeclarationOnly --declarationDir './dist'",
+    "build:esbuild": "node build.js"
   }
 }
